src/objects/BGBK__Transaction__c.object
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <fields>
        <fullName>BGBK__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optional - used to add a related account.</description>
        <inlineHelpText>Customer, Employee, Vendor exchanging the goods or money</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Balance_Amount__c</fullName>
        <description>Deprecated.</description>
        <formula>BGBK__Total_Amount__c + BGBK__Total_Related_Transactions_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BGBK__Cash_Type__c</fullName>
        <description>Deprecated.</description>
        <label>Cash Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deposit</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Withdrawal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGBK__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Description__c</fullName>
        <description>Deprecated.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Effective_Date__c</fullName>
        <description>Transaction posting date.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Effective Date</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BGBK__Original_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated.</description>
        <label>Original Transaction</label>
        <referenceTo>BGBK__Transaction__c</referenceTo>
        <relationshipLabel>Related Transactions</relationshipLabel>
        <relationshipName>SubTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Related_To__c</fullName>
        <description>Parent ID:Parent API Name (e.g. 00abc123blabla:MUSW__Permit2__c)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Related To</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Repost_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated.</description>
        <label>Repost Transaction</label>
        <referenceTo>BGBK__Transaction__c</referenceTo>
        <relationshipLabel>Reposted For</relationshipLabel>
        <relationshipName>ReversalTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Reversed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated.</description>
        <label>Reversed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBK__Status__c</fullName>
        <description>Deprecated.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Voided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGBK__Sub_Type__c</fullName>
        <description>This provides information about the business event that triggered the transaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Transaction Sub Type</inlineHelpText>
        <label>Sub Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Total_Amount__c</fullName>
        <description>Deprecated.</description>
        <label>Amount</label>
        <summarizedField>BGBK__Item__c.BGBK__Amount__c</summarizedField>
        <summaryForeignKey>BGBK__Item__c.BGBK__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BGBK__Total_Related_Transactions_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Deprecated.</description>
        <label>Total Related Transactions Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BGBK__Type__c</fullName>
        <description>System field that populates the transaction type.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transaction</label>
    <nameField>
        <displayFormat>T-{000000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BGBK__Cash_Type_Not_Permitted</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISPICKVAL( BGBK__Cash_Type__c, &apos;&apos;)),  NOT(ISPICKVAL(BGBK__Type__c, &apos;Cash&apos;)))</errorConditionFormula>
        <errorMessage>Cash Type can only be specified for Cash Transactions</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BGBK__Cash_Type_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( BGBK__Cash_Type__c, &apos;&apos;),  ISPICKVAL(BGBK__Type__c, &apos;Cash&apos;))</errorConditionFormula>
        <errorMessage>Cash Type is Required</errorMessage>
    </validationRules>
</CustomObject>